--- a/reunification/css/styleconex.css
+++ b/reunification/css/styleconex.css
@@ -23,6 +23,63 @@ height:240px;
 width: 100%;
 }
 
+#pop_overlay {
+  position: absolute;
+  width: 100%;
+  height: 1739px;
+  background-color: #F26e27;
+  opacity: 0.01;
+  z-index:99999;
+  top: 0px; 
+  left: 0px;
+}
+
+#pop_box {
+  z-index:99999;
+  margin-top: 4%;
+  margin-left: 40%;
+  min-width: 310px;
+  max-width: 310px;
+  top: auto; 
+  left: auto;
+  border-radius: 5px;
+  border: solid 5px blue;
+}
+
+#pop_box.pop_box {
+  font-family: Georgia, serif;
+  color: #F26e27;
+  background: white;
+  border-color: #F26e27;
+}
+
+#pop_title {
+  color: white;
+  font-weight: normal;
+  text-align: center;
+  background: #F26e27;
+  border: solid 1px #F26e27;
+}
+
+#pop_content {
+  background: none;
+}
+
+#pop_txt {
+  text-align: center;
+}
+
+#pop_panel {
+  text-align: center;
+  margin: 1em 1em 1em 1em;
+}
+
+#pop_button {
+  border: outset 2px #F26e27;
+  color: #F26e27;
+  background: white;
+}
+
 #menu_header {
 font-family: Gotham Rounded;
 text-align: center;
