--- a/reunification/css/stylins.css
+++ b/reunification/css/stylins.css
@@ -252,7 +252,7 @@ border-radius: 10px;
 border-color: #28282e;
 }
 
-@media only screen and (max-width:1300px){
+@media only screen and (max-width:1400px){
 
 html, body {
 margin:0;
@@ -343,7 +343,280 @@ border-radius: 50px;
 border-style: solid;
 border-width: 3px;
 border-color: #F26e27;
-margin-left: 28%;
+margin-left: 29%;
+margin-top: 60px;
+margin-bottom: 150px;
+}
+
+#inscription
+{
+margin-top: 40px;
+margin-left:35%;
+width: 60px;
+}
+
+h1{
+color: #F26e27;
+}
+
+/*menu footer*/
+#menu_footer {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    background-color: #28282e;
+    height: 10%;
+    width: 100%;
+}
+
+#menu_footer:hover {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    background-color: #28282e;
+    width: 100%;
+    height: 22%;
+}
+
+.bloc_footer {
+    width: 100%;
+}
+
+.bloc_footer ul {
+    text-align: left;
+}
+
+.bloc_footer ul li {
+    display: inline-block;
+    width: 18%;
+}
+
+.bloc_footer ul li a {
+    color: black;
+    font-size: 110%;
+}
+
+
+.img1 {
+    margin-left: 5%;
+    width: 50px;
+    height: 50px;
+    margin-top: 1%;
+}
+
+#greatplace {
+      float: right;
+          margin-right: 6%;
+          width: 200px;
+}
+
+/*Fleche vers le haut pour remarquer le footer*/
+.img2 {
+      display: block;
+      margin-left: 47%;
+      margin-bottom: 3%;
+      width: 3%;
+      height: 3%;
+}
+
+#logo{
+margin-left: 4%;
+}
+
+#acc{
+margin-right:40px;
+}
+
+#pro{
+margin-right:40px;
+}
+
+#fun{
+margin-right:40px;
+}
+
+a.info span{
+display: none;
+}
+
+a.info:hover {
+   background: none; /* Correction d'un bug d'Internet Explorer. */
+   z-index: 500; /* On définit une valeur pour l'ordre d'affichage. */
+   cursor: help; /* On change le curseur par défaut par un curseur d'aide. */
+}
+
+a.info:hover span.mdr {
+   display: inline; /* On affiche l'infobulle. */
+   position: absolute;
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+
+   top: 80%; /* On positionne notre infobulle. */
+   left: 30%;
+
+    background: #28282e;
+
+   color: white;
+   padding: 3px;
+
+  /* border-radius: 20px;*/
+}
+
+a.info:hover span.lol{
+   display: inline; /* On affiche l'infobulle. */
+   position: absolute;
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+
+   top: 80%; /* On positionne notre infobulle. */
+   left: 33%;
+
+   background: #28282e;
+
+   color: white;
+   padding: 3px;
+
+   /*border-radius: 20px;*/
+}
+
+a.info:hover span.je{
+   display: inline; /* On affiche l'infobulle. */
+   position: absolute;
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+
+   top: 80%; /* On positionne notre infobulle. */
+   left: 52.8%;
+
+   background: #28282e;
+
+   color: white;
+   padding: 3px;
+
+  /* border-radius: 20px;*/
+}
+
+a.info:hover span.sais{
+   display: inline; /* On affiche l'infobulle. */
+   position: absolute;
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+
+   top: 80%; /* On positionne notre infobulle. */
+   left: 61.2%;
+
+   background: #28282e;
+
+   color: white;
+   padding: 3px;
+ }
+
+#bouton11{
+background-color: #F26e27;
+border-color: #F26e27;
+border-width: 1px;
+border-radius: 10px;
+color:white;
+width: 80px;
+height: 30px;
+font-size: 13px;
+}
+
+#connexionForm input{
+border-radius: 10px;
+border-color: #28282e;
+}
+
+}
+
+@media only screen and (max-width:1024px){
+
+html, body {
+margin:0;
+padding:0;
+font-size:100%;
+color:black;
+background-color:white;
+font-family: Gotham Rounded;
+}
+
+label
+{
+  margin:0;
+  display: block;
+  width: 180px;
+  float: left;
+
+}
+
+/*Menu*/
+header{
+background: #28282e;
+height:240px;
+width: 100%;
+}
+
+#menu_header {
+font-family: Gotham Rounded;
+text-align: center;
+position:absolute;
+top:190px;
+font-size:15px;
+color:white;
+text-transform:uppercase;
+padding:auto;
+width:100%;
+background:#F26e27;
+
+}
+
+#head {
+padding:5px;
+border-radius:4px;
+
+}
+
+.h {
+display:inline;
+padding:0 14px 0 0;
+margin:0 14px 0 0;
+}
+
+.h:last-child {
+background:none;
+padding:0;
+margin:0;
+}
+
+.menu {
+color:white;
+text-decoration:none;
+}
+
+.menu:hover{
+color:#394147;
+}
+
+#hover
+{
+  /*margin-left: 50%;*/
+    position: absolute;
+    margin-left: 40%;
+    width: 180px;
+    top:65px;
+}
+
+#co
+{
+  margin-left:93%;
+}
+
+#ins
+{
+width:500px;
+height:500px;
+padding-left: 50px;
+border-radius: 50px;
+border-style: solid;
+border-width: 3px;
+border-color: #F26e27;
+margin-left: 23%;
 margin-top: 60px;
 margin-bottom: 150px;
 }
@@ -888,7 +1161,7 @@ border-width: 1.5px;
 border-color: #F26e27;
 margin-left: 3.1%;
 margin-right: auto;
-margin-top: 4%;
+margin-top: 6%;
 margin-bottom: 75px;
 }
 
