--- a/reunification/activecalendar/data/css/plain.css
+++ b/reunification/activecalendar/data/css/plain.css
@@ -1,9 +1,3 @@
-body {
-	font-family: Helvetica, Tahoma, Arial, sans-serif;
-	font-size: 12px;
-	text-align: center;
-	font-weight: normal;
-}
 #polo {
 	text-decoration: none;
 	text-align: center;
@@ -18,7 +12,7 @@ body {
 	height:20px;
 	width:20px;
 }
-a:hover {
+#polo a:hover {
 	text-decoration: none;
 	color: #3163CE;
 }
