--- a/reunification/css/style.css
+++ b/reunification/css/style.css
@@ -7,6 +7,16 @@ background:white;
 font-family: Gotham Rounded;
 }
 
+body {
+  overflow: hidden;
+}
+
+@media only screen and (max-device-width:1024px) {
+body {
+  overflow: hidden;
+}
+}
+
 /*Largeur de la fenetre*/
 @media only screen and (max-width:800px) {
  body {
